--- a/智慧仓储/智慧仓储驾驶舱.html
+++ b/智慧仓储/智慧仓储驾驶舱.html
@@ -67,17 +67,17 @@
             <!-- KPI 卡片组 -->
             <div class="grid grid-cols-2 gap-4">
                 <div
-                    class="bg-gray-800/40 border border-gray-700 p-4 rounded-xl hover:border-gray-500/50 transition-all cursor-default">
-                    <p class="text-slate-400 text-xs mb-1">库存总值 (CNY)</p>
+                    class="bg-gray-800/40 border border-blue-500/30 p-4 rounded-xl hover:border-blue-500 transition-all cursor-default hover:bg-blue-500/10 hover:shadow-lg hover:shadow-blue-500/20">
+                    <p class="text-blue-400 text-xs mb-1">库存总值 (CNY)</p>
                     <h3 class="text-2xl font-bold text-white">42.85M</h3>
-                    <p class="text-xs text-gray-300 mt-2 flex items-center gap-1"><span class="iconify"
+                    <p class="text-xs text-blue-300 mt-2 flex items-center gap-1"><span class="iconify"
                             data-icon="mdi:arrow-up"></span> 12.5%</p>
                 </div>
                 <div
-                    class="bg-gray-800/40 border border-gray-700 p-4 rounded-xl hover:border-gray-500/50 transition-all cursor-default">
-                    <p class="text-slate-400 text-xs mb-1">月均周转率</p>
+                    class="bg-gray-800/40 border border-emerald-500/30 p-4 rounded-xl hover:border-emerald-500 transition-all cursor-default hover:bg-emerald-500/10 hover:shadow-lg hover:shadow-emerald-500/20">
+                    <p class="text-emerald-400 text-xs mb-1">月均周转率</p>
                     <h3 class="text-2xl font-bold text-white">4.2次</h3>
-                    <p class="text-xs text-gray-400 mt-2 flex items-center gap-1"><span class="iconify"
+                    <p class="text-xs text-emerald-300 mt-2 flex items-center gap-1"><span class="iconify"
                             data-icon="mdi:minus"></span> 稳健</p>
                 </div>
             </div>
@@ -202,19 +202,19 @@
                             <tr class="hover:bg-gray-700/50 transition-colors">
                                 <td class="p-3">IN-20260109-001</td>
                                 <td class="p-3"><span
-                                        class="px-2 py-0.5 bg-gray-500/10 text-gray-300 rounded border border-gray-500/20">入库</span>
+                                        class="px-2 py-0.5 bg-emerald-500/20 text-emerald-400 rounded border border-emerald-500/30">入库</span>
                                 </td>
                                 <td class="p-3">精密传动模组 A</td>
                                 <td class="p-3">450</td>
                                 <td class="p-3 text-slate-500">09:12:44</td>
                                 <td class="p-3"><span class="flex items-center gap-1.5"><span
-                                            class="w-1.5 h-1.5 bg-gray-400 rounded-full animate-pulse"></span>执行中</span>
+                                            class="w-1.5 h-1.5 bg-yellow-400 rounded-full animate-pulse"></span>执行中</span>
                                 </td>
                             </tr>
                             <tr class="hover:bg-gray-700/50 transition-colors">
                                 <td class="p-3">OUT-20260109-024</td>
                                 <td class="p-3"><span
-                                        class="px-2 py-0.5 bg-gray-600/10 text-gray-300 rounded border border-gray-600/20">出库</span>
+                                        class="px-2 py-0.5 bg-blue-500/20 text-blue-400 rounded border border-blue-500/30">出库</span>
                                 </td>
                                 <td class="p-3">光伏组件 B-V3</td>
                                 <td class="p-3">1,200</td>
@@ -224,7 +224,7 @@
                             <tr class="hover:bg-gray-700/50 transition-colors">
                                 <td class="p-3">IN-20260109-002</td>
                                 <td class="p-3"><span
-                                        class="px-2 py-0.5 bg-gray-500/10 text-gray-300 rounded border border-gray-500/20">入库</span>
+                                        class="px-2 py-0.5 bg-emerald-500/20 text-emerald-400 rounded border border-emerald-500/30">入库</span>
                                 </td>
                                 <td class="p-3">冷却润滑剂 CL-90</td>
                                 <td class="p-3">300</td>
@@ -340,15 +340,16 @@
                     type: 'line',
                     smooth: true,
                     data: [120, 132, 101, 134, 90, 230, 210],
-                    itemStyle: { color: '#9ca3af' },
-                    areaStyle: { color: new echarts.graphic.LinearGradient(0, 0, 0, 1, [{ offset: 0, color: 'rgba(156,163,175,0.2)' }, { offset: 1, color: 'rgba(156,163,175,0)' }]) }
+                    itemStyle: { color: '#10b981' }, // emerald-500
+                    areaStyle: { color: new echarts.graphic.LinearGradient(0, 0, 0, 1, [{ offset: 0, color: 'rgba(16, 185, 129, 0.2)' }, { offset: 1, color: 'rgba(16, 185, 129, 0)' }]) }
                 },
                 {
                     name: '出库',
                     type: 'line',
                     smooth: true,
                     data: [150, 232, 201, 154, 190, 330, 410],
-                    itemStyle: { color: '#6b7280' }
+                    itemStyle: { color: '#3b82f6' }, // blue-500
+                    areaStyle: { color: new echarts.graphic.LinearGradient(0, 0, 0, 1, [{ offset: 0, color: 'rgba(59, 130, 246, 0.2)' }, { offset: 1, color: 'rgba(59, 130, 246, 0)' }]) }
                 }
             ]
         });
@@ -362,7 +363,18 @@
                 endAngle: 0,
                 radius: '100%',
                 pointer: { show: false },
-                progress: { show: true, overlap: false, roundCap: true, clip: false, itemStyle: { color: '#9ca3af' } },
+                progress: {
+                    show: true,
+                    overlap: false,
+                    roundCap: true,
+                    clip: false,
+                    itemStyle: {
+                        color: new echarts.graphic.LinearGradient(0, 0, 1, 0, [
+                            { offset: 0, color: '#3b82f6' },
+                            { offset: 1, color: '#06b6d4' }
+                        ])
+                    }
+                },
                 axisLine: { lineStyle: { width: 10, color: [[1, '#374151']] } },
                 splitLine: { show: false },
                 axisTick: { show: false },
@@ -386,10 +398,10 @@
                 itemStyle: { borderRadius: 10, borderColor: '#0f172a', borderWidth: 2 },
                 label: { show: false },
                 data: [
-                    { value: 1048, name: '原材料', itemStyle: { color: '#9ca3af' } },
-                    { value: 735, name: '半成品', itemStyle: { color: '#6b7280' } },
-                    { value: 580, name: '产成品', itemStyle: { color: '#4b5563' } },
-                    { value: 484, name: '备品备件', itemStyle: { color: '#374151' } }
+                    { value: 1048, name: '原材料', itemStyle: { color: '#3b82f6' } }, // blue-500
+                    { value: 735, name: '半成品', itemStyle: { color: '#10b981' } }, // emerald-500
+                    { value: 580, name: '产成品', itemStyle: { color: '#f59e0b' } }, // amber-500
+                    { value: 484, name: '备品备件', itemStyle: { color: '#8b5cf6' } } // violet-500
                 ]
             }]
         });
